feat: show alert transition history
